Public GetUserById with stiries, added it into docs, fixes
